<resources>
    <string name="app_name">BMSTU_GIS</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="account">Account</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="go">Go!</string>
    <string name="undone">тут будет построенный маршрут (скоро)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="ask_account">Don\'t have account?</string>
    <string name="title_signup">SignUp</string>
    <string name="title_login">Login</string>
    <string name="signup_btn">Sign Up!</string>
    <string name="ask_register">Already have account?</string>
    <string name="usr_email">your@s.mail</string>
    <string name="routes_list_title">Routes list</string>
    <string name="news_title">News</string>
    <string name="settings">Settings</string>
    <string name="clear_all_routes">Clear all routes</string>
    <string name="clear">Clear</string>
    <string name="signup">SignUp</string>
    <string name="skip_login">skip</string>

</resources>
